<resources>
    <string name="app_name">EssayJoke</string>

    <!-- 主界面文字 -->
    <string name="home_bottom_tab_home">首页</string>
    <string name="home_bottom_tab_find">发现</string>
    <string name="home_bottom_tab_new">新鲜</string>
    <string name="home_bottom_tab_message">消息</string>

    <!-- 弹出框文字 -->
    <string name="dialog_et_hint_text">期待你的神评论</string>
    <string name="dialog_submit_button">发送</string>
    <string name="dialog_desc_label">分享到：</string>

</resources>
