<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_bg"
        android:orientation="vertical"
        android:padding="10.0dp">

        <EditText
            android:id="@+id/et_comment_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_editor"
            android:hint="@string/dialog_et_hint_text"
            android:maxHeight="120.0dp"
            android:padding="9.0dp"
            android:textColor="@color/dialog_et_text"
            android:textSize="16.0sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_desc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dp"
                android:text="@string/dialog_desc_label"
                android:textColor="@color/dialog_desc_text"
                android:textSize="13.0sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_share_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_icon_weibo" />

                <ImageView
                    android:id="@+id/iv_share_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/account_icon_tencent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/platform_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_desc_label"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/bt_submit"
                android:layout_width="50.0dp"
                android:layout_height="25.0dp"
                android:background="@drawable/bg_dialog_submit_button"
                android:gravity="center"
                android:text="@string/dialog_submit_button"
                android:textColor="@color/dialog_submit_bt_text"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>